build/00006/H4P_QueueWarn_pico.log
Processing pico (platform: https://github.com/maxgerhardt/platform-raspberrypi.git#5b72058658ebaf98045755662bc8b28479bd288b; framework: arduino; board: rpipicow)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/raspberrypi/rpipicow.html
PLATFORM: Raspberry Pi RP2040 (1.14.0+sha.5b72058) > Pico W
HARDWARE: RP2040 133MHz, 256KB RAM, 2MB Flash
DEBUG: Current (blackmagic) External (blackmagic, cmsis-dap, jlink, picoprobe, raspberrypi-swd)
PACKAGES: 
 - framework-arduinopico @ 1.40101.0+sha.9d17f42 
 - tool-picotool-rp2040-earlephilhower @ 5.140200.240929 (14.2.0) 
 - toolchain-rp2040-earlephilhower @ 5.140200.240929 (14.2.0)
Converting H4P_QueueWarn.ino
Flash size: 2.00MB
Sketch size: 1.50MB
Filesystem size: 0.50MB
PSRAM size: 0.00MB
Maximium Sketch size: 1568768 EEPROM start: 0x101ff000 Filesystem start: 0x1017f000 Filesystem end: 0x101ff000
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ deep+, Compatibility ~ soft
Found 72 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.9+sha.6f2f510
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.12+sha.95236bc
|-- H4Plugins @ 3.5.7+sha.0ad6c2a
|-- LittleFS @ 0.1.0
|-- WiFi @ 1.0.0
|-- lwIP_CYW43 @ 1
|-- lwIP-Ethernet @ 1
|-- SPI @ 1.0
|-- Updater @ 1.0
|-- MD5Builder @ 1.0.0
|-- LEAmDNS @ 1.2
|-- DNSServer @ 1.1.1
|-- ArduinoOTA @ 1.0
|-- HTTPUpdate @ 1.3
|-- HTTPClient @ 1.2
Building in release mode
Compiling .pio/build/pico/src/H4P_QueueWarn.ino.cpp.o
Compiling .pio/build/pico/libe2d/H4AsyncWebServer/H4AT_HTTPHandlerWS.cpp.o
Compiling .pio/build/pico/FrameworkArduino/cyw43_wrappers.cpp.o
.pio/libdeps/pico/H4AsyncWebServer/src/H4AT_HTTPHandlerWS.cpp:32:9: fatal error: H4ASyncWebServer.h: No such file or directory
**************************************************************************
* Looking for H4ASyncWebServer.h dependency? Check our library registry!
*
* CLI  > platformio lib search "header:H4ASyncWebServer.h"
* Web  > https://registry.platformio.org/search?q=header:H4ASyncWebServer.h
*
**************************************************************************
   32 | #include<H4ASyncWebServer.h>
      |         ^~~~~~~~~~~~~~~~~~~~
compilation terminated.
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_QueueWarn.ino:29:20: warning: invalid suffix on literal; C++11 requires a space between literal and string macro [-Wliteral-suffix]
   29 |     Serial.println("H4P_QueueWarn example v"H4P_VERSION);
      |                    ^
*** [.pio/build/pico/libe2d/H4AsyncWebServer/H4AT_HTTPHandlerWS.cpp.o] Error 1
In file included from /home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_QueueWarn.ino:10:
.pio/libdeps/pico/H4Plugins/src/H4Plugins.h:6:76: note: '#pragma message: Using Wifi AP - Make sure you have made arrangements!'
    6 |     #pragma message("Using Wifi AP - Make sure you have made arrangements!")
      |                                                                            ^
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_QueueWarn.ino: In function 'void h4setup()':
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_QueueWarn.ino:30:10: error: 'class H4P_QueueWarn' has no member named 'info'
   30 |     h4qw.info(); // show limits
      |          ^~~~
*** [.pio/build/pico/src/H4P_QueueWarn.ino.cpp.o] Error 1
========================== [FAILED] Took 4.95 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
pico           FAILED    00:00:04.948
==================== 1 failed, 0 succeeded in 00:00:04.948 ====================